--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
 * {
-  box-sizing: border-box;
+}
+
+html {
+	margin: auto;
+	width: 80%;
+	align-self: center;
+	align-content: center;
+	background: #592941;
+	background: -moz-linear-gradient(top, #592941 0%, #C73B0B 50%, #592941 100%);
+	background: -webkit-linear-gradient(top, #592941 0%, #C73B0B 50%, #592941 100%);
+	background: linear-gradient(to bottom, #592941 0%, #C73B0B 50%, #592941 100%);
+	background-position: center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover; 
+	background-size: 100% 100%;
+	background-attachment: fixed;
+	box-sizing: border-box;
 }
 
 /* Create two unequal columns that floats next to each other */
@@ -13,7 +31,7 @@
 }
 
 .right {
-  width: 20%;
+  width: 15%;
 }
 
 /* Clear floats after the columns */
@@ -21,6 +39,22 @@
   content: "";
   display: table;
   clear: both;
+}
+
+.row h2{
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-style: normal;
+	font-variant: small-caps;
+	font-weight: 700;
+}
+
+.row h5 {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	font-style: normal;
+	font-variant: small-caps;
+	font-weight: 400;
 }
 
 .diamondbutton {
@@ -39,12 +73,14 @@
 }
 
 .dbselected {
-	background-image: url(images/diamond.png), url(images/glow.jfif);
+	background-image: url(images/diamond.png), url(images/golden_solar_rays.svg);
+	background-color: transparent;
 }
 
 .majoroffbutton {
 	background-color: #F5EDD3;
 	border: none;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 22px;
 	font-weight: normal;
 	text-align:center;
@@ -53,7 +89,95 @@
 .majoronbutton {
 	background-color:#8BB09E;
 	border: none;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 22px;
 	text-align:center;
-	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+	font-weight: 700;
+}
+
+.prose {
+	background-image: url(images/paperbackground.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin: 50px;
+	padding: 30px;
+	font-family: "Goudy Old Style", "Didot", "Garamond", "Georgia";
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 21.6px;
+	border: double #F2C545;
+}
+
+.basic {
+	background-color: #F5EDD3;
+	padding:20px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 32px;
+	border: double #F2C545;
+}
+
+.question {
+	font-variant: small-caps;
+	text-align: center;
+}
+
+.header {
+	background-image: url(images/scroll.svg);
+	background-size: 100% 100%;
+	background-position: contain;
+	padding: 40px;
+	margin-left: -10%;
+	margin-right: -10%;
+	text-align: center;
+	font-family: "Goudy Old Style", "Didot", "Garamond", "Georgia";
+}
+
+.proceed {
+	background-image: url(images/paperbackground.jpg);
+	background-position: center;
+	border:none;
+	font-size: 25px;
+	font-family: "Goudy Old Style", "Didot", "Garamond", "Georgia";
+	font-variant: small-caps;
+	line-height: 35px;
+	margin-left: 30px;
+	margin-right: 30px;
+	padding: 15px;
+	min-width: 200px;
+}
+
+.diamondlist {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 32px
+}
+
+.offbutton {
+	background-color: #F5EDD3;
+	border: none;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	text-align:center;
+	margin: 10px;
+}
+
+.onbutton {
+	background-color: #ACC7B9;
+	border: solid #592941;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	text-align:center;
+	margin: 10px;
 }
